--- a/templates/pwademo/manifest.json
+++ b/templates/pwademo/manifest.json
@@ -10,132 +10,132 @@
       {
           "src": "/static/images/icons/100.png",
           "type": "image/png",
-          "sizes": "100x100",
+          "sizes": "100x100"
       },
       {
           "src": "/static/images/icons/1024.png",
           "type": "image/png",
-          "sizes": "1024x1024",
+          "sizes": "1024x1024"
       },
       {
           "src": "/static/images/icons/114.png",
           "type": "image/png",
-          "sizes": "114x114",
+          "sizes": "114x114"
       },
       {
           "src": "/static/images/icons/120.png",
           "type": "image/png",
-          "sizes": "120x120",
+          "sizes": "120x120"
       },
       {
           "src": "/static/images/icons/128.png",
           "type": "image/png",
-          "sizes": "128x128",
+          "sizes": "128x128"
       },
       {
           "src": "/static/images/icons/144.png",
           "type": "image/png",
-          "sizes": "144x144",
+          "sizes": "144x144"
       },
       {
           "src": "/static/images/icons/152.png",
           "type": "image/png",
-          "sizes": "152x152",
+          "sizes": "152x152"
       },
       {
           "src": "/static/images/icons/16.png",
           "type": "image/png",
-          "sizes": "16x16",
+          "sizes": "16x16"
       },
       {
           "src": "/static/images/icons/167.png",
           "type": "image/png",
-          "sizes": "167x167",
+          "sizes": "167x167"
       },
       {
           "src": "/static/images/icons/180.png",
           "type": "image/png",
-          "sizes": "180x180",
+          "sizes": "180x180"
       },
       {
           "src": "/static/images/icons/192.png",
           "type": "image/png",
-          "sizes": "192x192",
+          "sizes": "192x192"
       },
       {
           "src": "/static/images/icons/20.png",
           "type": "image/png",
-          "sizes": "20x20",
+          "sizes": "20x20"
       },
       {
           "src": "/static/images/icons/256.png",
           "type": "image/png",
-          "sizes": "256x256",
+          "sizes": "256x256"
       },
       {
           "src": "/static/images/icons/29.png",
           "type": "image/png",
-          "sizes": "29x29",
+          "sizes": "29x29"
       },
       {
           "src": "/static/images/icons/32.png",
           "type": "image/png",
-          "sizes": "32x32",
+          "sizes": "32x32"
       },
       {
           "src": "/static/images/icons/40.png",
           "type": "image/png",
-          "sizes": "40x40",
+          "sizes": "40x40"
       },
       {
           "src": "/static/images/icons/50.png",
           "type": "image/png",
-          "sizes": "50x50",
+          "sizes": "50x50"
       },
       {
           "src": "/static/images/icons/512.png",
           "type": "image/png",
-          "sizes": "512x512",
+          "sizes": "512x512"
       },
       {
           "src": "/static/images/icons/57.png",
           "type": "image/png",
-          "sizes": "57x57",
+          "sizes": "57x57"
       },
       {
           "src": "/static/images/icons/58.png",
           "type": "image/png",
-          "sizes": "58x58",
+          "sizes": "58x58"
       },
       {
           "src": "/static/images/icons/60.png",
           "type": "image/png",
-          "sizes": "60x60",
+          "sizes": "60x60"
       },
       {
           "src": "/static/images/icons/64.png",
           "type": "image/png",
-          "sizes": "64x64",
+          "sizes": "64x64"
       },
       {
           "src": "/static/images/icons/72.png",
           "type": "image/png",
-          "sizes": "72x72",
+          "sizes": "72x72"
       },
       {
           "src": "/static/images/icons/76.png",
           "type": "image/png",
-          "sizes": "76x76",
+          "sizes": "76x76"
       },
       {
           "src": "/static/images/icons/80.png",
           "type": "image/png",
-          "sizes": "80x80",
+          "sizes": "80x80"
       },
       {
           "src": "/static/images/icons/87.png",
           "type": "image/png",
-          "sizes": "87x87",
+          "sizes": "87x87"
       }
   ]
 }
